docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct ELECTRON_TAU_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_TRITON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_ATOMIC_MASS_UNIT_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_HARTREE_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_HERTZ_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_JOULE_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_KELVIN_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2018;
ADD_IMPORT extern const cct ELEMENTARY_CHARGE_2018;
ADD_IMPORT extern const cct ELEMENTARY_CHARGE_OVER_H_BAR_2018;